 * Searching in the dust: Fix Hog Solo dropping straight down when roping near smuggler
 * Searching in the dust: Fix incorrect messages after collecting device part
 * Precise flying: Fix victory not being recognized, also wait for flames to settle before losing
 * Hard Flying: Fix ending in a Lua error
 * The First Stop: Fix stats screen showing teams twice
 * Killing The Specialists: Fix killing hog with Deagle gave you chance to use another weapon in same turn
 * Fix weird behaviour when walking right before the first animation in most missions
 * Fix a coupe of texts being untranslatable
 * Fix a variety of minor logic flaws in the story
 * Fix typos
 * All missions: Fix incorrect crate types

Missions:
 + New scenario: Teamwork 2
 + New scenario: Big Armory
 + New training: Basic Flying Saucer Training
 + Rope-Knocking Challenge was improved (now awards score based on kills and time; taunts for knocking out hedgehogs)
 + Rewrote some help texts in basic rope training
 + Graphical effect (black bars) while in cut scenes
 + Change description and icon for baseball bat in Knockball mission map
 * Portal Mind Challenge was cleaned up and reworked (especially less awful wording)
 * Fixed Target Practice missions getting stuck when a target dropped into water
 * Fixed mistakes and bad wording of strings in several missions, scripts and campaigns
 * Fixed Lua error messages and broken stats screen in Climb Home singleplayer mission

Frontend:
 + Campaign screen shows which campaigns and missions you've completed so far
 + Training screen now has 3 mission categories: Training (tutorials), Challenge (get a high score), Scenario (complete a task)
 + Replaced the Fort Mode game modifier by adding "Forts" to the map type selection. This makes the mode easier selectable/discoverable. Also the slider can be used to adjust the distance between forts.
 + Menu screens got few new icons and other tweaks, e.g. larger dropdown lists for easier access